--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,4 +1,12 @@
 RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
+AddDefaultCharset utf-8
+
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+
+# if a directory or a file exists, use it directly
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule . index.php [L]
+RewriteCond %{REQUEST_FILENAME} !-d
+
+# otherwise forward it to index.php
+RewriteRule . index.php
